# tracking

./: .gitignore  CMakeLists.txt  blobtrack_sample.sh  readme.md
ustc_src/: trackingMain.cpp  ustc_bgs.cpp  ustc_bgs.h
ustc_src/bgs_subsense_optical_flow/qt_cmake_bgs_sof/: CMakeLists.txt  bgs_sof.cpp  bgs_sof.h  main.cpp  readme.md  shrink.cpp  subsenseshrink.cpp  subsenseshrink.h  yzbx.cpp  yzbx.h
ustc_src/pl/: BackgroundSubtractorSuBSENSE.cpp  BackgroundSubtractorSuBSENSE.h
ustc_src/shrinkBGS/: CMakeLists.txt  main.cpp  shrinkbgs.cpp  shrinkbgs.h
